fixing navbar spacing/cleaning up code

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,16 +1,20 @@
+body {
+    margin: 0px;
+}
+
 .NavbarItems{
     background: linear-gradient(90deg, rgb(230, 181, 217) 0%, rgb(38, 182, 231) 100%);
-    height: 80px; 
+    height: 110px; 
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
     width: 100%;
-    /* position: relative; */
-    /* align-self: center; */
-    position: fixed;
-    top: 0;
-    margin-bottom: 80px;
+    position: relative;
+    align-self: center;
+    /* position: fixed; */
+    /* top: 0; */
+    /* margin-bottom: 80px; */
 }
 
 .navbar-logo {
