--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -3,7 +3,7 @@
   }
   
   body {
-    /* display: flex; */
+    display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
